added a few things to index.html including lists rogress bar and a clickable button for freference material

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-I am doing work on this website
+
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+     <h1>Hello world!!!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit sit ipsum, at illum nihil? Numquam sunt
+        harum
+        cupiditate molestias laborum hic iste. In corporis quod consequatur ducimus fuga. Minus.
+    </p>
+    <time><datetime>september 18th 2021</datetime></time>
+    <br>
+    <button class="favorite styled"
+        type="button">
+    Add to favorites
+</button>
+<br>
+<label for="file">File progress:</label>
+
+<progress id="file" max="100" value="70"> 70% </progress>
+<br>
+<label for="dino-select">Choose a dinosaur:</label>
+<select id="dino-select">
+    <optgroup label="Theropods">
+        <option>Tyrannosaurus</option>
+        <option>Velociraptor</option>
+        <option>Deinonychus</option>
+    </optgroup>
+    <optgroup label="Sauropods">
+        <option>Diplodocus</option>
+        <option>Saltasaurus</option>
+        <option>Apatosaurus</option>
+    </optgroup>
+</select>
+    <img
+        src="https://media0.giphy.com/media/8ijyVhpvHEX7aQxfKY/giphy.gif?cid=ecf05e47d6917863f124af2736da639af69ab279263e32d8&rid=giphy.gif&ct=g" />
+    <a href="https://google.ca">Here is google</a>
+    <p>this is
+        <a href="https://google.ca">Link!!</a>
+    </p>
+
+</body>
+</html>
