--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Document</title>
 </head>
 <body>
+    <a href="menu.html"></a>
      <h1>Hello world!!!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit sit ipsum, at illum nihil? Numquam sunt
         harum
