--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-</head><a href="menu.html"></a>
+</head>
 <body>
-    
+    <a href="pages/menu.html">this is menu</a>
      <h1>Hello world!!!</h1>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam fugit sit ipsum, at illum nihil? Numquam sunt
         harum
