--- a/pages/menu.html
+++ b/pages/menu.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>this is a menu</h1>
-    <a href="index.html"></a>
+    <a href="../index.html">this is index</a>
+
+    
 </body>
 </html>
