--- a/pages/menu.html
+++ b/pages/menu.html
@@ -10,6 +10,12 @@
     <h1>this is a menu</h1>
     <a href="../index.html">this is index</a>
 
-    
+    <h2>this is the food we serve</h2>
+    <p>
+        <img src="../Images/pizza.jpg" alt="pizza">
+        we serve this kind of pizza
+        <img src="../Images/pizza2.jpg" alt="more pizza">
+        we also serve this kind of pizza
+    </p>
 </body>
 </html>
