removed broken lines

--- a/pages/menu.html
+++ b/pages/menu.html
@@ -13,9 +13,9 @@
     <h2>this is the food we serve</h2>
     <p>
         <img src="../Images/pizza.jpg" alt="pizza">
-       <br> we serve this kind of pizza
+        we serve this kind of pizza
         <img src="../Images/pizza2.jpg" alt="more pizza">
-       <br> we also serve this kind of pizza
+        we also serve this kind of pizza
     </p>
 </body>
 </html>
